--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -12,7 +12,7 @@ A process $f(t)$ is wide-sense stationary, if the expectation value $E[f(t)]$ is
 
 
 
-\section{Coherence}
+\section{Basic Conecepts of Coherence}
 
 
 
@@ -23,7 +23,7 @@ Spherical waves as  solutions to scalar wave equation in spherical coordinates,
 	E(\vec{r},t)=E_0(k,t) \frac{e^{i\vec{r}\vec{k}-iwt}}{R}
 	\end{equation}
 describe light propagating isotropically. 
-Superposition principle of two waves with the real amplitudes $A_{1,2}$ and phases $\phi{1,2}$
+Superposition principle of two waves with the real amplitudes $A_{1,2}$ and phases $\phi_{1,2}$
 \begin{equation}
 E(\vec{r},t)=E_1(\vec{r},t)+E_2\vec{r},t)=A_1*e^{i\phi_1} * e^{i\vec{r}\vec{k_1}-iw_1t} + A_1*e^{i\phi_1} * e^{i\vec{r}\vec{k_2}-iw_2t} 
 \end{equation} 
@@ -255,7 +255,7 @@ For $N$ Single-Photon-Emitters and quantum optical treatment,  a similiar form h
 \begin{equation}
 	g_2(\vec{r_1},\vec{r_2}) = 1+ |g_1(\vec{r_1},\vec{r_2}) |^2 - \frac{2}{N} ,
 \end{equation}
-As, as according to the van Cittert Zernicke theorem \fref{eq:vcz}, $g_1$ encodes structural information, 
+As, as according to the van Cittert Zernicke theorem, \fref{eq:vcz}, $g_1$ encodes structural information, 
 \begin{equation}
 	g_1(\vec{k_1},\vec{k_2}) \propto \mathscr{F}S(\vec{r}) = S(\vec{q})
 \end{equation}
